# evarx-ai-platform

./: .gitignore  Makefile  README.md
.github/workflows/: debug-ftp.yml  deploy.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_audit_logs.py  0003_documents_pgvector.py  0004_org_invites.py  0005_conversations_agents.py  0006_agent_preferred_model.py  0007_users_status.py  0008_agent_metadata.py
apps/api/src/evarx_api/: main.py  settings.py
apps/api/src/evarx_api/agents/: models.py  routes.py  templates.py
apps/api/src/evarx_api/auth/: bootstrap.py  dependencies.py  jwt.py  routes.py
apps/api/src/evarx_api/chat/: authenticated.py  embeddings.py  llm.py  routes.py  schemas.py
apps/api/src/evarx_api/conversations/: models.py  routes.py
apps/api/src/evarx_api/core/: db.py  exceptions.py  redis.py
apps/api/src/evarx_api/documents/: chunker.py  extract.py  ingestion.py  models.py  routes.py  schemas.py
apps/api/src/evarx_api/health/: routes.py
apps/api/src/evarx_api/logs/: models.py  routes.py  writer.py
apps/api/src/evarx_api/models/: routes.py
apps/api/src/evarx_api/notifications/: email.py
apps/api/src/evarx_api/orgs/: invites_models.py  members_routes.py  models.py  routes.py  schemas.py
apps/api/src/evarx_api/platform/: routes.py
apps/api/src/evarx_api/storage/: s3.py
apps/api/src/evarx_api/usage/: routes.py
apps/api/tests/: test_health.py
apps/console/: .env.example  .gitignore  middleware.ts  package.json  (+1 more)
(+165 files in other folders)
